fix(docker): try to fix CI build by changing base image